--- a/boost/libs/smart_ptr/index.htm
+++ b/boost/libs/smart_ptr/index.htm
@@ -34,6 +34,10 @@
 			<li>
 				Header <a href="../../boost/weak_ptr.hpp">weak_ptr.hpp</a>.</li>
 			<li>
+				Header <a href="../../boost/enable_shared_from_this.hpp">enable_shared_from_this.hpp</a>.</li>
+			<li>
+				Header <a href="../../boost/intrusive_ptr.hpp">intrusive_ptr.hpp</a>.</li>
+			<li>
 				Test program <a href="test/smart_ptr_test.cpp">smart_ptr_test.cpp</a>.</li>
 			<li>
 				Originally submitted by <a href="../../people/greg_colvin.htm">Greg Colvin</a> and
@@ -41,7 +45,7 @@
 				by <a href="../../people/peter_dimov.htm">Peter Dimov</a> and <a href="../../people/darin_adler.htm">
 					Darin Adler</a>.</li>
 		</ul>
-		<p>Revised <!--webbot bot="Timestamp" s-type="EDITED" s-format="%d %B %Y" startspan --> 
-			1 February 2002<!--webbot bot="Timestamp" endspan i-checksum="14885" --> .</p>
+		<hr>
+		<p>$Date$</p>
 	</body>
 </html>
