get_shared_ptr renamed to weak_ptr::lock.
SVN-Revision: 17307

--- a/boost/libs/smart_ptr/shared_ptr.htm
+++ b/boost/libs/smart_ptr/shared_ptr.htm
@@ -390,8 +390,8 @@ q = p;
 				many of the implicit conversion pitfalls.</P>
 		</blockquote>
 		<P><EM>[The conversion to bool is not merely syntactic sugar. It allows <STRONG>shared_ptr</STRONG>s 
-				to be declared in conditions when using <STRONG>dynamic_pointer_cast </STRONG>or
-				<STRONG>get_shared_ptr</STRONG>.]</EM></P>
+				to be declared in conditions when using <A href="#dynamic_pointer_cast">dynamic_pointer_cast</A> or
+				<A href="weak_ptr.htm#lock">weak_ptr::lock</A>.]</EM></P>
 		<h3><a name="swap">swap</a></h3>
 		<pre>void swap(shared_ptr &amp; b); // never throws</pre>
 		<blockquote>
